fix menu overflow

--- a/idea/gear/frontend/src/features/balance/ui/get-test-balance/get-test-balance.module.scss
+++ b/idea/gear/frontend/src/features/balance/ui/get-test-balance/get-test-balance.module.scss
@@ -1,9 +1,3 @@
-.button {
-  --font-size: 14px;
-  --padding: 4px 8px;
-  --spinner-size: 14px;
-}
-
 .overlay {
   display: none;
 
@@ -16,8 +10,8 @@
   left: 0;
   z-index: 10;
 
-  background-color: #0003;
-  backdrop-filter: blur(20px);
+  background-color: #0006;
+  backdrop-filter: blur(7.5px);
 
   &.active {
     display: flex;
